# sonance

./: Cargo.toml  README.md  book.toml  justfile  shell.nix  tsconfig.tsbuildinfo
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs  test.rs
docs/: book.toml  justfile
docs/src/: SUMMARY.md  bibliography.md  overview.md
docs/src/design/: advanced_modules.md  backpassing.md  blocks.md  modules.md  strings.md  tokens.md  traits.md  types.md
docs/src/devlog/: 2025-09-08.md
docs/src/summary/: preface.md
docs/theme/: custom-highlight.js
scratch/: scratch.son
server/: Cargo.toml
sonance-lsp/: Cargo.toml
sonance-vscode/: CHANGELOG.md  README.md  justfile  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json  vsc-extension-quickstart.md
sonance-vscode/src/: extension.ts
sonance-vscode/syntaxes/: sonance.tmLanguage.json
spring/: Cargo.toml
spring/scratch/: scratch.son
spring/src/: lib.rs  main.rs
spring/src/interpret/: error.rs  mod.rs
spring/src/parse_tree/: data.rs  mod.rs  token.rs
spring/src/test/: mod.rs
spring/src/type_tree/: data.rs  error.rs  mod.rs
spring/tests/: snapshots.rs
spring/tests/input/: goodbye_world.son  hello_world.son
spring/tests/snapshots/: snapshots__compiler@goodbye_world.son.snap  snapshots__compiler@hello_world.son.snap
src/: SUMMARY.md  prelude.md
src/guide/advanced/: blocks.md  named_impls.md
src/guide/getting_started/: modules.md  types.md
src/language/: inspirations.md  overview.md
src/reference/: language.md
theme/: custom-highlight.js
(+1 files in other folders)
